# DocMill

./: .gitignore  DESIGN.md  NEXT_WORK.md  README.md  docmill.yaml.example  pyproject.toml  run.py
docker/: Dockerfile.backend  Dockerfile.frontend  docker-compose.yml  nginx.conf
docmill/: __init__.py  core.py
docmill/clients/: __init__.py  base.py  openai_compat.py
docmill/config/: __init__.py  loader.py  schema.py
docmill/engines/: __init__.py  base.py  deepseek_ocr.py  paddle_ocr_vl.py  registry.py
docmill/engines/deepseek_ocr/: __init__.py  defaults.yaml  engine.py
docmill/engines/paddle_ocr_vl/: __init__.py  defaults.yaml  engine.py
docmill/execution/: hybrid.py  local.py  remote.py  strategy.py
docmill/launcher/: __init__.py  app_launcher.py
docmill/llm_clients/: openai_compat.py
docmill/models/deepseek_ocr/: hooks.py  (+1 more)
docmill/orchestrator/: __init__.py  health.py  launcher.py  planner.py  pool.py  registry.py  sidecar_pool.py
docmill/pipelines/: base.py  factory.py  llm_only.py  vision_llm.py  vision_only.py
docmill/server/: __init__.py  api.py  api_v2.py  main.py
docmill/storage/: __init__.py  file_store.py  history_store.py
docmill/tasks/: __init__.py  task_manager.py  task_store.py
docmill/utils/: errors.py  hardware.py  logging.py  ports.py
docmill/workers/: __init__.py  base.py  paddle_worker.py  pool.py  torch_worker.py
examples/: test_paddle_ocr_vl_example.py  v2_example.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  router.ts  style.css
scripts/: test_paddle_ocr_vl.py
(+18 files in other folders)
